# actix-web-example

./: .env  .gitignore  .travis.yml  Cargo.toml  Makefile  README  doc.md  docker-compose.yml
migrations/2019-12-17-140812_create_users/: up.sql
migrations/2020-04-29-145839_create_users/: up.sql
src/: db.rs  handlers.rs  main.rs  schema.rs
src/actions/: user.rs
src/api/: auth.rs
src/middleware/auth/: jwt.rs
src/model/: user.rs
src/schemas/: root.rs
src/user/: actions.rs  api.rs  dto.rs  mod.rs  models.rs  schemas.rs  service.rs
test/: main.rs
