[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["1521350289@qq.com <1521350289@qq.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-rt = "1.0.0"
actix-web = "1.0"
listenfd = "0.3"
diesel = { version = "1.4.3", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
serde="1.0.9"
num_cpus = "1.11.1"
chrono = { version = "0.4.6", features = ["serde"] }
serde_derive="1.0.97"
env_logger = "0.7.1"
actix-files = "0.1"
