[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["1521350289@qq.com <1521350289@qq.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.0"
actix-web = "2.0.0"
actix-service = "1.0.5"
listenfd = "0.3"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde="1.0.106"
num_cpus = "1.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
serde_derive="1.0.106"
serde_json = "1.0.53"
env_logger = "0.7.1"
actix-files = "0.2.1"
futures = "0.3.4"
juniper = "0.14.2"